bynkc/tests/fixtures/negative/239_store_field_unsupported/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String
  store count: Cell[Int] = 0

  on call bump() -> Effect[()] {
    count := count + 1
    ()
  }
}
